syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.zapp.content.games";

package com.glance.spaces.zapp.content.games;

import "com/glance/spaces/common/gaming/game_info.proto";
import "com/glance/spaces/zapp/content/common/element_cta.proto";

message NewArrivalsXlElement {
  spaces.common.gaming.GameInfo game_info = 1;
}

